# Lists

./: .gitignore  CMakeLists.txt  LICENSE  conanfile.txt
backend/: CMakeLists.txt
backend/src/: main.cpp
proto/: CMakeLists.txt  book.proto  bookRecord.proto  book_api.proto
sql/: create_table.sql
src/: main.cpp
src/api/: api_server.cpp  api_server.h
src/model/: book.cpp  book.h
